# pact-cdc-example

./: LICENSE  README.md
consumer/: Cargo.toml
consumer/src/: lib.rs
consumer/tests/: contract_tests.rs
pact_contracts/: User Consumer Service-User Provider Service.json
provider/: .gitignore  pyproject.toml  pytest_pactman.sh
provider/src/: entities.py  schemas.py  server.py
provider/tests/: conftest.py  pact_provider.py  test_verify_pact_contracts.py
