[package]
name = "user_consumer_service"
description = "A simple consumer application using the pact_consumer crate to show how to do Consumer-driven Contract Testing."
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Nefendi <28621696+Nefendi@users.noreply.github.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11.11", features = ["json"]}
uuid = { version = "1.1.2", features = ["serde", "v4"] }

[dev-dependencies]
pact_consumer = "0.9.5"
